2009-03-08  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::bloop): loop --> bloop.
	(idx_vector::loop): New method.
	* MArray.cc (MArray<T>::idx_add (cons idx_vector&, T))
	(MArray<T>::idx_add (cons idx_vector&, const MArray<T>&)): New methods.
	* MArray.h: Declare them.

2009-03-05  Jason Riedy  <jason@acm.org>

	* Sparse.h (Sparse<T>::elt_type): Remove typedef, replace with:
	* Sparse.h (Sparse<T>::element_type): Add typedef to be consistent
	with Array.h
	* DiagArray2.h (DiagArray2<T>::elt_type): Likewise, removed.
	* DiagArray2.h (DiagArray2<T>::element_type): Define by using
	Array<T>::element_type.
	* intNDArray.h (intNDArray<T>::element_type): Remove, inherited
	from MArrayN<T>.

2009-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* dSparse.h (SparseMatrix::SparseMatrix(const PermMatrix&)): New
	constructor.
	(SparseMatrix::SparseMatrix(const DiagMatrix&)): Fix implementation.
	* CSparse.h (SparseComplexMatrix::SparseComplexMatrix(const ComplexDiagMatrix&)): 
	Fix implementation.

2009-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* PermMatrix.h (PermMatrix::elem): Fix comparisons.

2009-03-03  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (xmin (float, float), xmax (float, float)): Simplify.

2009-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc: Add missing #include.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* Makefile.in: Make maintainer-clean and distclean the same.

2009-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.cc (pow (const octave_int<T>&, const octave_int<T>&)):
	Simplify.

2009-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* oct-inttypes.h (octave_int_cmp_op::mop): Implement as simple
	forwarders when OCTAVE_INT_USE_LONG_DOUBLE is not defined.
	(octave_int_cmp_op::emulate_mop): New static overloaded template
	member function.
	* oct-inttypes.cc: Turn the octave_int_cmp_op::mop definitions into
	defs for octave_int_cmp_op::emulate_mop. 
	(INSTANTIATE_INT64_DOUBLE_CMP_OP0): Instantiate